# skillgen

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/project-conventions/: SKILL.md
.claude/skills/skillgen/: SKILL.md  enrich.md
.cursor/rules/: architecture.mdc  code-style.mdc  documentation.mdc  error-handling.mdc  imports-and-dependencies.mdc  logging-and-observability.mdc  naming-conventions.mdc  testing.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  Plan.md  QA_REPORT.md  REQUIREMENTS.md  TECHNICAL_SPEC.md
docs/superpowers/plans/: 2026-03-27-online-skill-enrichment.md  2026-03-27-skillgen-claude-code-plugin.md  2026-03-27-skillgen-hybrid-mode.md  2026-03-28-enrich-v2-multi-source.md
docs/superpowers/specs/: 2026-03-27-online-skill-enrichment-design.md  2026-03-27-skillgen-claude-code-plugin-design.md  2026-03-27-skillgen-hybrid-mode-design.md  2026-03-28-enrich-v2-multi-source-design.md
skillgen/: __init__.py  analyzer.py  cli.py  detector.py  enricher.py  generator.py  models.py  renderer.py  synthesizer.py  ts_extractors.py  ts_parser.py  writer.py
skills/skillgen/: SKILL.md
tests/: __init__.py  test_analyzer.py  test_detector.py  test_enricher.py  test_generator.py  test_synthesizer.py  test_ts_extractors.py  test_writer.py
